--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,3 +1,19 @@
+FROM node:16.14-alpine
+
+WORKDIR /app-backend
+
+COPY package.json ./
+
+COPY package-lock.json ./
+
+RUN npm install
+
+COPY . .
+
+EXPOSE 3001
+
+CMD [ "npm", "run", "dev" ]
+
 # Usar a imagem node:16.14-alpine como base
 
 # Mudar para o diretório de trabalho /app-backend
